<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_corn_theme"
    tools:context=".LoginActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        android:scaleType="centerInside"/>

    <!-- Cornache Text -->
    <TextView
        android:id="@+id/cornache_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Cornache"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <!-- Username Field -->
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cornache_text"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:background="@drawable/bg_edit_text"
        android:padding="10dp"
        android:drawablePadding="10dp" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:background="@drawable/bg_edit_text"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:inputType="textPassword" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/login"
        android:backgroundTint="#4CAF50"
        android:textColor="@android:color/black" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_below="@id/loginButton"
        android:layout_marginEnd="30dp"
        android:text="Belum punya akun? Register di sini"
        android:backgroundTint="#FFD700"
        android:textColor="@android:color/black" />

</RelativeLayout>
