...
   - Penyemprotan Fungisida: Semprot tanaman dengan fungisida sistemik dan kontak pada usia 10, 20, dan 40 hari setelah tanam untuk mengendalikan penyakit selama fase pertumbuhan.\n\n
Dengan mengikuti rangkaian pengendalian ini, diharapkan penyakit busuk lepah dizoktonia dapat diminimalisir dan tanaman dapat tumbuh dengan sehat serta produktif.

    </string>
    <string name="success">login berhasil</string>
    <string name="welcome_back">selamat datang kembali</string>
    <string name="dialog_continue">login berhasil</string>
    <string name="error">gagal register silahkan isi data dengan benar</string>
    <string name="cornache">CornAche</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
